---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 9
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/index_target_node.rb
---
foo[bar] = 1
begin
rescue  => foo[bar]
end
for foo[bar] in baz end
